--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
                         <input type="password" name="confirmpassword" id="confirmPassword" class="field confirmpassword" required>
                     </div>
                 </div>
+                <div class="passwordSame">
+                    <p id="checkPassword" class="fade-in"></p>
+                </div>
 
                 <div class="actionBtn">
                     <button id = "btn" class="createAccount" type="submit">Create Account</button><br><br>
